<resources>
    <string name="app_name">Mis Series App</string>

    <!--SignUpActivity-->
    <string name="form">Formulario de Registro</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="required_field">"*Campo obligatorio "</string>
    <string name="Password">Contraseña</string>
    <string name="repPassword">Repita la Contraseña</string>
    <string name="register">Registrar</string>
    <string name="info">Info</string>
    <string name="male">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="comedy">Comedia</string>
    <string name="action">Accion</string>
    <string name="suspence">"Suspenso "</string>
    <string name="drama">Drama</string>
    <string name="genre">"Generos Favoritos "</string>
    <string name="date">Fecha de Nacimiento</string>
    <string name="nacimiento">Lugar de nacimiento</string>
    <!--SignUpActivity-->
</resources>